--- a/examples/config.yml
+++ b/examples/config.yml
@@ -1,6 +1,9 @@
 directories:
   - /tmp/monkey
   - /path/to/dir
+recepients:
+  - ed@axei.org
+  - snake@axei.org
 device: /dev/sdb1
 mount: /mnt/backup
 daemon: no
